changed into dark theme UI

--- a/mobapde-latest-UI/app/src/main/res/values/colors.xml
+++ b/mobapde-latest-UI/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#ff7722</color>
     <color name="colorAccent">#FF4081</color>
     <color name="primary_material_dark_1">#212121</color>
+    <color name="primary_dark_material_dark">#455a64</color>
 </resources>
