--- a/mobapde-latest-UI/app/src/main/res/layout/activity_note_final.xml
+++ b/mobapde-latest-UI/app/src/main/res/layout/activity_note_final.xml
@@ -9,11 +9,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/noteContainer"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="421dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="9dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_noteSearch" />
 
@@ -43,18 +46,18 @@
 
     <TextView
         android:id="@+id/txtCreateNote"
-        android:layout_width="106dp"
-        android:layout_height="33dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
 
-        android:layout_marginStart="270dp"
-        android:layout_marginLeft="270dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:clickable="true"
         android:text="Create Note"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="?android:attr/colorPressedHighlight"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/noteContainer" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/txtNoteHeader"
