--- a/mobapde-latest-UI/app/src/main/res/layout/activity_plain_text.xml
+++ b/mobapde-latest-UI/app/src/main/res/layout/activity_plain_text.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2D3142"
     android:overScrollMode="always"
     android:scrollbarStyle="insideInset"
     android:scrollbars="vertical"
@@ -33,11 +32,13 @@
 
     <TextView
         android:id="@+id/MdownContent"
-        android:layout_width="366dp"
+        android:layout_width="0dp"
         android:layout_height="453dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="98dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:clickable="true"
         android:cursorVisible="true"
         android:editable="true"
@@ -48,8 +49,9 @@
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/MDownTitle" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
