--- a/mobapde-latest-UI/app/src/main/res/values-v21/styles.xml
+++ b/mobapde-latest-UI/app/src/main/res/values-v21/styles.xml
@@ -7,5 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:colorPrimaryDark">@color/primary_dark_material_dark</item>
+        <item name="android:colorPrimary">@color/primary_material_dark</item>
+        <item name="android:colorAccent">@color/accent_material_dark</item>
     </style>
 </resources>
