--- a/mobapde-latest-UI/app/src/main/res/values/colors.xml
+++ b/mobapde-latest-UI/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="primary_material_dark_1">#212121</color>
     <color name="primary_dark_material_dark">#455a64</color>
+    <color name="primary_material_dark">#607d8b</color>
+    <color name="accent_material_dark">#80cbc4</color>
 </resources>
